dark mode fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,9 +14,11 @@
     --color-accent-pink: #F5BABB;
 }
 
-.dark {
-  --background: #0a0a0a;
-  --foreground: #ededed;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
 }
 
 body {
